<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="facebook_app_id">363134427182519</string>
    <string name="app_name">PetTinder</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button1_string">Destroy Activity</string>
    <string name="button2_string">Discovery Page</string>
    <string name="settings_string">Settings</string>
    <string name="matches_string">Matches</string>
    <string name="discovery_string">Discovery</string>
    <string name="view_profile_string">View Profile</string>
    <string name="my_pet_profile_string">My Pet Profile</string>
    <string name="discovery_preferences_string">Discovery Preferences</string>
    <string name="app_settings_string">App Settings</string>
    <string name="share_pettinder_string">Share PetTinder</string>
    <string name="edit_profile_string">Edit Profile</string>
    <string name="connection_string">Connection</string>
    <string name="remove_match_string">Remove Match</string>
    <string name="report_match_string">Report Match</string>
    <string name="discoveryNo">No</string>
    <string name="discoveryYes">Yes</string>
    <string name="discoveryMore">Profile Options</string>
    <string name="discoveryImage">Profile Picture</string>
    <string name="discoveryName">Default Name</string>
    <string name="discoveryBreed">Default Breed</string>
    <string name="search_string">Search</string>
    <string name="profile_picture_string">Profile Picture</string>
    <string name="profile_bio_string">Profile Biography</string>
    <string name="discovery_range_string">Discovery Range</string>
    <string name="discovery_range_calculated_string">Discovery Range</string>
    <string name="pref_discovery_range_default">10</string>
    <string name="pref_discovery_types">Pet Types</string>
    <string name="pref_dogs">Dogs</string>
    <string name="pref_cats">Cats</string>
    <string name="pref_other">Other</string>
    <string name="pref_dogs_summ">Show dogs in discovery results</string>
    <string name="pref_cats_summ">Show cats in discovery results</string>
    <string name="pref_other_summ">Show other pets in discovery results</string>
    <string name="delete_account_string">Delete Account</string>
    <string name="logout_string">Logout</string>
    <string name="pet_name_string">Pet Name</string>
    <string name="bio_string">About Pet Name</string>
    <string name="distance_string">X Miles Away</string>
    <string name="message_elipses">...</string>

    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="breed_array">
        <item>Dog</item>
        <item>Cat</item>
        <item>Other</item>
    </string-array>

    <string name="title_activity_messaging">MessagingActivity</string>

</resources>
