<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.pettinder.MainActivity" >

    
    <item
        android:id="@+id/settings"
        android:orderInCategory="200"
        android:title="@string/settings_string"
        app:showAsAction="never"/>
    <item
        android:id="@+id/view_profile"
        android:orderInCategory="200"
        android:title="@string/view_profile_string"
        app:showAsAction="never"/>
    <item
        android:id="@+id/remove_match"
        android:orderInCategory="200"
        android:title="@string/remove_match_string"
        app:showAsAction="never"/>
    <item
        android:id="@+id/report_match"
        android:orderInCategory="200"
        android:title="@string/report_match_string"
        app:showAsAction="never"/>

</menu>
